# Pedictor_Full

./: .env  .gitignore  DEPLOYMENT.md  Procfile  README.md  backend_authentication.py  firebase.js  insert.sql  key.json  package-lock.json  predictor.db  pyproject.toml  pytest.ini  requeriments.txt  superuser  test.py  views.py.clean
app/: settings.py  urls.py
app/app/: settings.py
app_escritorio/: consulta.py  main.py  optima.py  optuna_study.db  requirements.txt
app_escritorio/Data/: Reporte_juego.xlsx
app_escritorio/Entity/: modelo.py  numero.py  parametro.py  predictor.py  reporte.py
backend/: admin.py  config.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/data/: Reporte_juego.xlsx
backend/entities/: modelo.py  numero.py  parametro.py  predictor.py
backend/entity/: modelo.py  predictor.py  utils.py  vecinos.py
backend/migrations/: 0001_initial.py  0002_create_initial_data.py  0002_inicial_data.py  0003_game.py  0004_rename_id_juego_game_id_game_and_more.py
config/: health_check.py  settings.py  urls.py
contact/: admin.py  models.py  tests_contact.py  urls.py  views.py
contact/__pycache__/: tests_contact.cpython-311-pytest-8.3.5.pyc.20184
contact/migrations/: 0001_initial.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  test.js  vite.config.js
frontend/src/: App.css  App.jsx  firebase.js  index.css  main.jsx
frontend/src/config/: i18n.jsx  (+1 more)
games/: ModeloPredictor.py  admin.py  models.py  predictor.py  predictor_singleton.py  serializers.py  tests.py  urls.py  views.py
games/migrations/: 0001_initial.py
licenses/: models.py  serializers.py  tests.py  urls.py  views.py
licenses/migrations/: 0001_initial.py
payments/: admin.py  models.py  serializers.py  tests.py  tests_payments.py  urls.py  utils.py  views.py
payments/__pycache__/: tests_payments.cpython-311-pytest-8.3.5.pyc.21212  tests_payments.cpython-311-pytest-8.3.5.pyc.6668
payments/migrations/: 0001_initial.py  0002_paymentintent_external_reference.py
reports/: admin.py  models.py  tests.py  urls.py  views.py
scripts/: run_migrations.py  run_tests.bat
subscriptions/: admin.py  decorators.py  middleware.py  models.py  serializers.py  tests.py  tests_suscriptcions.py  urls.py  utils.py  views.py
test/: test_endpoints.py
training_model/: Main.py  Parametro.py
users/: admin.py  authentication.py  firebase_utils.py  models.py  serializers.py  tests_users.py  urls.py  views.py
(+46 files in other folders)
